--- a/polish-version-calisia-web/contact-pl.html
+++ b/polish-version-calisia-web/contact-pl.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="inside-form-2 inside-form-2-responsive">
                         <div class="boldletter">Detale</div>
-                        <div class="second-line">calisia-arts@gmail.com </br> </br>
+                        <div class="second-line">calisiaarts@gmail.com </br> </br>
 
                             <span class="bank-account-letters"> KRS: 0000933278 </span> </br>
 
