--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -105,7 +105,7 @@
    
     <div class="width-form">
         <p class="text-application text-competition">Aplikacje można pobrać i wysłać na naszego maila: <spam class="bank-account-letters">
-                calisia-arts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
+                calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
         </p>
         <form>
             <a class="download-button" href="Application form .docx" download>
