--- a/chinese-version/contact-chinese.html
+++ b/chinese-version/contact-chinese.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="inside-form-2 inside-form-2-responsive">
                         <div class="boldletter">Details </div>
-                        <div class="second-line">calisia-arts@gmail.com </br> </br>
+                        <div class="second-line">calisiaarts@gmail.com </br> </br>
 
                             <span class="bank-account-letters">KRS: </span> 0000933278 兹罗提账户: 57160014621808126950000001 </br>
                             欧元账户: </br> PL03 1600 1462 1808 1269 5000 0003 </br>
