--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="inside-form-2 inside-form-2-responsive">
                         <div class="boldletter">Details </div>
-                        <div class="second-line">calisia-arts@gmail.com </br> </br>
+                        <div class="second-line">calisiaarts@gmail.com </br> </br>
 
                             <span class="bank-account-letters"> KRS: 0000933278 </span> </br>
 
