--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Main Stylesheet CSS -->
-    <link rel="stylesheet" href="style.css?id=8">
+    <link rel="stylesheet" href="style.css?id=9">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 </head>
@@ -81,10 +81,11 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">First International <br> Henryk Melcer <br> Piano
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">International <br> Henryk Melcer <br> Piano
                         Competition</h2>
                     <hr class="bottomline">
                 </div>
+                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
                 <div class="tp-caption rev-video2 customin customout start">
                     <div data-aos="fade-up" data-aos-duration="1000" class="deadline">Application deadline <br>15.12.2022</div>
                 </div>
