--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -19,7 +19,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Main Stylesheet CSS -->
-    <link rel="stylesheet" href="style.css?id=8">
+    <link rel="stylesheet" href="style.css?id=9">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 </head>
@@ -89,6 +89,7 @@
                     <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">第一届亨利克・梅赛 <br> 尔国际钢 <br> 琴比赛</h2>
                     <hr class="bottomline">
                 </div>
+                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
                 <div class="tp-caption rev-video2 customin customout start">
                     <div data-aos="fade-up" data-aos-duration="1000" class="deadline">報名截止日期 <br>15.12.2022</div>
                 </div>
