changes pl rules

--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -84,8 +84,7 @@
         podziwianym w całej Europie kompozytorem i pianistą, który po śmierci popadł w zapomnienie 
         i nie jest obecnie znany szerszemu gronu melomanów. 
         Uczestniczący w konkursie pianiści z całego świata będą mieli okazję zaprezentować 
-        swoje umiejętności międzynarodowemu jury pod przewodnictwem jednego z czołowych polskich 
-        pianistów młodego pokolenia Łukasza Byrdy.
+        swoje umiejętności międzynarodowemu jury.
         Wybrani uczestnicy będą mogli wziąć udział w internetowych kursach mistrzowskich prowadzonych 
         przez członków komisji konkursowej. Oprócz nagród pieniężnych, finaliści zostaną zaproszeni 
         do udziału w koncertach laureatów w Polsce, Niemczech i Austrii.
