--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -102,7 +102,7 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/team-1.jpg" alt="team member" />
-                    <h1 class="h1-team-members"> Filip Pinczewski</h1>
+                    <h1 class="h1-team-members"> Filip Pinczewski MA</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
@@ -137,7 +137,7 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/team-2.jpg" alt="team member" />
-                    <h1 class="h1-team-members">Katarzyna Piątkowska-Pinczewska</h1>
+                    <h1 class="h1-team-members">Dr Katarzyna Piątkowska-Pinczewska MBA</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
@@ -192,7 +192,7 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/team-3.jpg" alt="team member" />
-                    <h1 class="h1-team-members">Łukasz Byrdy</h1>
+                    <h1 class="h1-team-members">Łukasz Byrdy MA</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
