about-calisia-foundation

--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -84,18 +84,15 @@
                 </div>
                 <div class="team-text">
                     <p class="p-team">
-                        Fundacja Calisia arts powstała z inicjatywy artystów, pedagogów i
-                        animatorów kultury związanych z Kaliszem. Jej celem jest promocja
-                        muzyki klasycznej i ożywianie oferty kulturalnej Kalisza oraz
-                        regionu Wielkopolski poprzez organizowanie wydarzeń
-                        artystycznych o zasięgu międzynarodowym.
-                        Fundacja Calisia arts ma swoją siedzibę w Kaliszu, najstarszym
-                        polskim mieście, które kojarzone jest z fabryką pianin i fortepianów
-                        Calisia, i które słynie z jednej z nielicznych na świecie szkół
-                        kształcących budowniczych fortepianów Technikum Budowy
-                        Fortepianów im. Arnolda Fibigera. Naturalnie więc bardzo istotnym
-                        aspektem działalności Fundacji jest promowanie muzyki
-                        fortepianowej. 
+                        Fundacja Calisia arts powstała z inicjatywy artystów, pedagogów i animatorów kultury związanych
+                        z Kaliszem. Jej celem jest promocja muzyki klasycznej i poszerzanie oferty kulturalnej Kalisza i
+                        Wielkopolski poprzez organizowanie wydarzeń artystycznych o zasięgu krajowym i
+                        międzynarodowym. Fundacja Calisia arts ma swoją siedzibę w Kaliszu, najstarszym polskim
+                        mieście, które kojarzone jest z fabryką fortepianów i pianin Calisia.
+                        Kalisz słynie także z jednej z nielicznych na świecie szkół kształcących budowniczych,
+                        renowatorów i stroicieli fortepianów i pianin Technikum Budowy Fortepianów im. Arnolda Fibigera,
+                        naturalnie więc bardzo istotnym aspektem działalności Fundacji jest promowanie muzyki
+                        fortepianowej.
                     </p>
                 </div>
             </div>
