Polish-version-competition-rules

--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -79,15 +79,14 @@
         <h1 class="h1-team">Konkurs</h1>
     </div>
     <p class="text-application width-form border-competition">
-        I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera ma na celu promowanie twórczości 
-        tego wybitnego artysty.  Pochodzący z Kalisza Melcer był 
-        podziwianym w całej Europie kompozytorem i pianistą, który po śmierci popadł w zapomnienie 
-        i nie jest obecnie znany szerszemu gronu melomanów. 
-        Uczestniczący w konkursie pianiści z całego świata będą mieli okazję zaprezentować 
-        swoje umiejętności międzynarodowemu jury.
-        Wybrani uczestnicy będą mogli wziąć udział w internetowych kursach mistrzowskich prowadzonych 
-        przez członków komisji konkursowej. Oprócz nagród pieniężnych, finaliści zostaną zaproszeni 
-        do udziału w koncertach laureatów w Polsce, Niemczech i Austrii.
+        I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera ma na celu odkrywanie i
+        promowanie utalentowanych pianistów z całego świata.
+        Patronem konkursu jest związany z Kaliszem wybitny kompozytor i pianista Henryk Melcer, który
+        po śmierci popadł w zapomnienie i nie jest obecnie znany szerszemu gronu melomanów.
+        Laureaci konkursu wystąpią w salach koncertowych w Polsce i Austrii, a wybrani uczestnicy będą
+        mieli szansę wzięcia udziału w kursach mistrzowskich organizowanych przez Fundację Calisia
+        arts, które zostaną poprowadzone przez uznanych pianistów i pedagogów.
+        Oprócz występów na koncertach finałowych dla laureatów przewidziane są nagrody pieniężne.
     </p>
     <div class="width-form">
         <form>
