chineese-ang-competition

--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -83,21 +83,19 @@
 </header>
 <section class="contact">
     <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
-        <h1 class="h1-team">Competition</h1>
+        <h1 class="h1-team">The Competition</h1>
     </div>
     <p class="text-application width-form border-competition">
-        The 1st Henryk Melcer International Piano Competition aims to promote the work of this
-        outstanding composer from Kalisz, whose work has been forgotten and is currently not
-        known to a wider group of music lovers. The aim of the competition is also to discover
-        young talents as well as to promote older pianists. By participating in the competition,
-        pianists from all over the world will have the opportunity to present their abilities to a wider
-        audience and make their debut on the Europe’s stages. The competition is also a great
-        platform to evaluate pianist’s current abilities and further develop piano playing skills.
-        Therefor selected participants will be able to take part in online masterclasses conducted
-        by members of the jury.
-        The contestants will be judged by an international jury. In addition to the cash prizes, the
-        finalists will have the opportunity to perform at concerts in prestigious venues in
-        Poland, Germany and Austria.
+        The 1st International Henryk Melcer Piano Competition aims to discover and promote
+        talented pianists from all over the world.
+        The patron of the competition is Henryk Melcer, an outstanding composer and pianist
+        closely associated with Kalisz, who was sadly forgotten after his death and is currently not
+        known to a wider circle of music lovers.
+        Winners of the competition will perform in concert halls in Poland and Austria, while
+        selected participants will have the opportunity to take part in master classes organised by
+        the Calisia arts foundation, which will be conducted by renowned pianists and
+        pedagogues.
+        In addition to performances at the final concerts, there will be cash prizes for the winners.
     </p>
     <div class="width-form">
         <form>
