--- a/team.html
+++ b/team.html
@@ -85,24 +85,21 @@
                 </div>
                 <div class="team-text">
                     <p class="p-team">
-                        The Calisia arts Foundation was established as an initiative of artists,
-                        educators and cultural animators connected with Kalisz. Its aim is to promote
-                        classical music and stimulate the cultural life of Kalisz and the Wielkopolska
-                        region by organizing events, concerts and other various artistic projects of international
-                        scope.
-                        The Calisia arts Foundation is based in Kalisz – the oldest polish city. The city is associated
-                        with the Calisia piano factory and famous for one of the few in the world piano building schools
-                        – the Arnold Fibiger
-                        Technical School of Building Pianos. Naturally, therefore, a very important aspect of
-                        foundation’s
-                        activity is promoting piano music.
+                        The Calisia arts foundation was established on the initiative of artists, educators and
+                        cultural animators associated with Kalisz. Its aim is to promote classical music and expand
+                        the cultural offer of Kalisz and Greater Poland by organising artistic events of national and
+                        international scope. The Calisia arts foundation is based in Kalisz, the oldest Polish city,
+                        which is known for the Calisia grand and upright piano factory.
+                        Kalisz is also famous for one of the few schools in the world which educates grand and
+                        upright piano builders, renovators and tuners, the Arnold Fibiger Piano Building School, so
+                        naturally the promotion of piano music is a key aspect of the Foundation’s activities.
                     </p>
                 </div>
             </div>
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/team-1.jpg" alt="team member" />
-                    <h1 class="h1-team-members"> Filip Pinczewski</h1>
+                    <h1 class="h1-team-members"> Filip Pinczewski MA</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
@@ -132,7 +129,7 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/team-2.jpg" alt="team member" />
-                    <h1 class="h1-team-members">Katarzyna Piątkowska-Pinczewska</h1>
+                    <h1 class="h1-team-members">PhD Katarzyna Piątkowska-Pinczewska MBA</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
@@ -179,7 +176,7 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/team-3.jpg" alt="team member" />
-                    <h1 class="h1-team-members">Łukasz Byrdy</h1>
+                    <h1 class="h1-team-members">Łukasz Byrdy MA</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
