--- a/about.html
+++ b/about.html
@@ -114,6 +114,10 @@
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-3.jpg"
                         alt="city, kalisz, view" />
                 </div>
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/calisia one.jpeg"
+                        alt="city, kalisz, view" />
+                </div>
             </div>
             <div class="about about-right desktop-only">
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
@@ -192,6 +196,10 @@
                         <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-2.jpg"
                         alt="city, kalisz, view" />
                     </div>
+                    <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                        <img class="img-kalisz-1 img-kalisz-2" src="slider-images/calisia one.jpeg"
+                            alt="city, kalisz, view" />
+                    </div>
                 </div>
                 <div class="about about-right mobile-only">
                     <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
@@ -209,6 +217,7 @@
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-3.jpg"
                         alt="city, kalisz, view" />
                 </div>
+               
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
                     Restoration of the town between 1920s and 1930s was the first such a venture nationwide. The
                     old-town
