--- a/polish-version-calisia-web/about-pl.html
+++ b/polish-version-calisia-web/about-pl.html
@@ -93,6 +93,10 @@
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-3.jpg"
                         alt="city, kalisz, view" />
                 </div>
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/calisia one.jpeg"
+                        alt="city, kalisz, view" />
+                </div>
             </div>
             <div class="about about-right desktop-only">
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
@@ -127,6 +131,10 @@
                     <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
                         <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-2.jpg"
                         alt="city, kalisz, view" />
+                    </div>
+                    <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                        <img class="img-kalisz-1 img-kalisz-2" src="slider-images/calisia one.jpeg"
+                            alt="city, kalisz, view" />
                     </div>
                 </div>
                 <div class="about about-right mobile-only">
