--- a/rules.html
+++ b/rules.html
@@ -88,7 +88,7 @@
         <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
             <h1 class="h1-team">The Competition</h1>
         </div>
-        <p class="text-application width-form border-competition">
+        <p class="text-application width-form">
             The 1st International Henryk Melcer Piano Competition aims to discover and promote
             talented pianists from all over the world.
             The patron of the competition is Henryk Melcer, an outstanding composer and pianist
@@ -100,9 +100,49 @@
             pedagogues.
             In addition to performances at the final concerts, there will be cash prizes for the winners.
         </p>
+        <div class="width-form border-competition">
+
+        </div>
+
+        </div>
+        <div class="container-photo">
+            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
+                    alt="city, kalisz, view" />
+                <div class="label-photo">
+                    Masterclass with Jury member Łukasz Byrdy in Canada
+                </div>
+            </div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
+                    alt="city, kalisz, view" />
+                <div class="label-photo">
+                    Prizewinners' concert venue in Kalisz
+                </div>
+            </div>
+            <div class="small-photo-container">
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
+                    <div class="label-photo width-label">
+                        Prizewinners' concert venue in Vienna
+                    </div>
+                </div>
+
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Prizewinners' concert venue in Vienna
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="width-form border-competition">
+
+        </div>
         <div class="width-form">
             <form>
-                <p class="text-application text-competition"> Rules of the competition <i class="fa-solid fa-arrow-down"></i>  </p>
+                <p class="text-application text-competition"> Rules of the competition <i
+                        class="fa-solid fa-arrow-down"></i> </p>
                 <a class="download-button" href="Rules Melcer Competition - English.docx" download>
 
                     <p class="download-text">Download rules of the competition</p>
@@ -112,9 +152,10 @@
         </div>
     </section>
     <section class="contact">
-      
+
         <div class="width-form">
-            <p class="text-application text-competition">Send your application to our e-mail: <spam class="bank-account-letters">
+            <p class="text-application text-competition">Send your application to our e-mail: <spam
+                    class="bank-account-letters">
                     calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
             </p>
             <form>
