--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +24,7 @@
 </head>
 
 <body>
+
     <body>
         <header class="header">
             <div id="home">
@@ -35,15 +37,19 @@
                                 <li><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
                                 <li><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
                                 </li>
-                                <li ><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
+                                <li><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
                                 <li><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
                                 </li>
-                                <li class="active"><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                                <li class="active"><a data-scroll href="rulespl.html"
+                                        class="int-collapse-menu">Konkurs</a></li>
                             </ul>
                             <div class="languages">
-                                <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                                <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                                <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                                <a href="indexpl.html"><img class="img-flag"
+                                        src="slider-images/icons8-poland-48.png" /></a>
+                                <a href="../index.html"><img class="img-flag"
+                                        src="slider-images/icons8-great-britain-48.png" /></a>
+                                <a href="../chinese-version/index-chinese.html"><img class="img-flag"
+                                        src="slider-images/icons8-china-48.png" /></a>
                             </div>
                             <button class="hamburger">
                                 <i class="fa-solid fa-bars"></i>
@@ -51,95 +57,146 @@
                         </div>
                         <div class="hamburger-list-div">
                             <ul class="hamburger-list">
-                                <li class="li-hamburger"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a>
+                                <li class="li-hamburger"><a data-scroll href="indexpl.html"
+                                        class="int-collapse-menu">Home</a>
                                 </li>
-                                <li class="li-hamburger"><a data-scroll href="about-pl.html"
-                                        class="int-collapse-menu">O Kaliszu</a>
+                                <li class="li-hamburger"><a data-scroll href="about-pl.html" class="int-collapse-menu">O
+                                        Kaliszu</a>
                                 </li>
-                                <li class="li-hamburger"><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a>
+                                <li class="li-hamburger"><a data-scroll href="team-pl.html"
+                                        class="int-collapse-menu">Zespół</a>
                                 </li>
                                 <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                         class="int-collapse-menu">Kontakt</a></li>
                                 <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                             </ul>
                             <div class="languages-2">
-                                <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                                <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                                <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                                <a href="indexpl.html"><img class="img-flag"
+                                        src="slider-images/icons8-poland-48.png" /></a>
+                                <a href="../index.html"><img class="img-flag"
+                                        src="slider-images/icons8-great-britain-48.png" /></a>
+                                <a href="../chinese-version/index-chinese.html"><img class="img-flag"
+                                        src="slider-images/icons8-china-48.png" /></a>
                             </div>
-    
+
                         </div>
                     </div>
                 </div>
             </div>
-    
+
         </header>
-<section class="contact">
-    <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
-        <h1 class="h1-team">Konkurs</h1>
-    </div>
-    <p class="text-application width-form border-competition">
-        I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera ma na celu odkrywanie i
-        promowanie utalentowanych pianistów z całego świata.
-        Patronem konkursu jest związany z Kaliszem wybitny kompozytor i pianista Henryk Melcer, który
-        po śmierci popadł w zapomnienie i nie jest obecnie znany szerszemu gronu melomanów.
-        Laureaci konkursu wystąpią w salach koncertowych w Polsce i Austrii, a wybrani uczestnicy będą
-        mieli szansę wzięcia udziału w kursach mistrzowskich organizowanych przez Fundację Calisia
-        arts, które zostaną poprowadzone przez uznanych pianistów i pedagogów.
-        Oprócz występów na koncertach finałowych dla laureatów przewidziane są nagrody pieniężne.
-    </p>
-    <div class="width-form">
-        <form>
-            <p class="text-application text-competition"> Regulamin konkursu <i class="fa-solid fa-arrow-down"></i>  </p>
-            <a class="download-button" href="Rules of the Competition - Polish.docx" download>
+        <section class="contact">
+            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+                <h1 class="h1-team">Konkurs</h1>
+            </div>
+            <div class="container-text-photos">
+                <div class="text-container">
+                    <p class="text-application width-form">
+                        I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera ma na celu odkrywanie i
+                        promowanie utalentowanych pianistów z całego świata.
+                        Patronem konkursu jest związany z Kaliszem wybitny kompozytor i pianista Henryk Melcer, który
+                        po śmierci popadł w zapomnienie i nie jest obecnie znany szerszemu gronu melomanów.
+                        Laureaci konkursu wystąpią w salach koncertowych w Polsce i Austrii, a wybrani uczestnicy będą
+                        mieli szansę wzięcia udziału w kursach mistrzowskich organizowanych przez Fundację Calisia
+                        arts, które zostaną poprowadzone przez uznanych pianistów i pedagogów.
+                        Oprócz występów na koncertach finałowych dla laureatów przewidziane są nagrody pieniężne.
+                    </p>
+                </div>
+                <div class="width-form border-competition">
 
-                <p class="download-text">Pobierz regulamin konkursu</p>
+                </div>
 
-            </a>
-        </form>
-    </div>
-</section>
-<section class="contact">
-   
-    <div class="width-form">
-        <p class="text-application text-competition">Aplikacje można pobrać i wysłać na naszego maila: <spam class="bank-account-letters">
-                calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
-        </p>
-        <form>
-            <a class="download-button" href="Application form .docx" download>
-
-                <p class="download-text-2">Download Application</p>
-
-            </a>
-        </form>
-    </div>
-</section>
-
-    <!--/ FOOTER SECTION-->
-
-    <section id="footer" class="footer-wrapper text-center">
-        <div data-aos="zoom-in" data-aos-duration="1000" class="container">
-            <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
-                <div class="aligncenter">
-                    <div class="socialFooter">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-youtube"></i></a>
+            </div>
+            <div class="container-photo">
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
+                        alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Masterclass with Jury member Łukasz Byrdy in Canada
                     </div>
-                    <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
-                            Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
+                </div>
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
+                        alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Prizewinners' concert venue in Kalisz
+                    </div>
+                </div>
+                <div class="small-photo-container">
+                    <div data-aos="fade-right" data-aos-duration="1000" class="image-about-3">
+                        <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg"
+                            alt="city, kalisz, view" />
+                        <div class="label-photo width-label">
+                            Prizewinners' concert venue in Vienna
+                        </div>
+                    </div>
+
+                    <div data-aos="fade-right" data-aos-duration="1000" class="image-about-4">
+                        <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg"
+                            alt="city, kalisz, view" />
+                        <div class="label-photo">
+                            Prizewinners' concert venue in Vienna
+                        </div>
+                    </div>
                 </div>
             </div>
-    </section>
-    <script src="js/about.js"></script>
+            <div class="width-form border-competition">
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+            </div>
+            <div class="width-form">
+                <form>
+                    <p class="text-application text-competition"> Regulamin konkursu <i
+                            class="fa-solid fa-arrow-down"></i> </p>
+                    <a class="download-button" href="Rules of the Competition - Polish.docx" download>
 
-    <script>
+                        <p class="download-text">Pobierz regulamin konkursu</p>
 
-        AOS.init();
+                    </a>
+                </form>
+            </div>
+        </section>
+        <section class="contact">
 
-    </script>
-</body>
+            <div class="width-form">
+                <p class="text-application text-competition">Aplikacje można pobrać i wysłać na naszego maila: <spam
+                        class="bank-account-letters">
+                        calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
+                </p>
+                <form>
+                    <a class="download-button" href="Application form .docx" download>
+
+                        <p class="download-text-2">Download Application</p>
+
+                    </a>
+                </form>
+            </div>
+        </section>
+
+        <!--/ FOOTER SECTION-->
+
+        <section id="footer" class="footer-wrapper text-center">
+            <div data-aos="zoom-in" data-aos-duration="1000" class="container">
+                <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
+                    <div class="aligncenter">
+                        <div class="socialFooter">
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-youtube"></i></a>
+                        </div>
+                        <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
+                                Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
+                    </div>
+                </div>
+        </section>
+        <script src="js/about.js"></script>
+
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+        <script>
+
+            AOS.init();
+
+        </script>
+    </body>
 
 </html>
