chinese and polish mobile version photos rules

--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -122,23 +122,21 @@
                         Prizewinners' concert venue in Kalisz
                     </div>
                 </div>
-                <div class="small-photo-container">
-                    <div data-aos="fade-right" data-aos-duration="1000" class="image-about-3">
-                        <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg"
-                            alt="city, kalisz, view" />
-                        <div class="label-photo width-label">
-                            Prizewinners' concert venue in Vienna
-                        </div>
-                    </div>
 
-                    <div data-aos="fade-right" data-aos-duration="1000" class="image-about-4">
-                        <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg"
-                            alt="city, kalisz, view" />
-                        <div class="label-photo">
-                            Prizewinners' concert venue in Vienna
-                        </div>
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
+                    <div class="label-photo width-label">
+                        Prizewinners' concert venue in Vienna
                     </div>
                 </div>
+
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Prizewinners' concert venue in Vienna
+                    </div>
+                </div>
+
             </div>
             <div class="width-form border-competition">
 
