labels polish version

--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -112,28 +112,28 @@
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
                         alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Masterclass with Jury member Łukasz Byrdy in Canada
+                        Kursy mistrzowskie w Kanadzie prowadzone  przez przewodniczącego Jury Łukasza Byrdy
                     </div>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
                         alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Prizewinners' concert venue in Kalisz
+                        Sala koncertowa w Kaliszu, w której okazję będą mieli zaprezentować się laureaci konkursu 
                     </div>
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
                     <div class="label-photo width-label">
-                        Prizewinners' concert venue in Vienna
+                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się laureaci konkursu
                     </div>
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Prizewinners' concert venue in Vienna
+                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się laureaci konkursu
                     </div>
                 </div>
 
