--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -93,16 +93,13 @@
         <h1 class="h1-team">The Competition</h1>
     </div>
     <p class="text-application width-form">
-        The 1st International Henryk Melcer Piano Competition aims to discover and promote
-        talented pianists from all over the world.
-        The patron of the competition is Henryk Melcer, an outstanding composer and pianist
-        closely associated with Kalisz, who was sadly forgotten after his death and is currently not
-        known to a wider circle of music lovers.
-        Winners of the competition will perform in concert halls in Poland and Austria, while
-        selected participants will have the opportunity to take part in master classes organised by
-        the Calisia arts foundation, which will be conducted by renowned pianists and
-        pedagogues.
-        In addition to performances at the final concerts, there will be cash prizes for the winners.
+        第⼀届国际亨利克·梅尔瑟钢琴⽐赛旨在发现和推⼴来⾃世界各地的才华横溢的钢琴
+家。 ⽐赛的赞助⼈是亨利克·梅尔瑟（Henryk Melcer），他是⼀位杰出的作曲家和钢
+琴家，与卡利什（Kalisz）有着密切的关系，在他去世后不幸被世⼈遗忘，⽬前他的
+名字在更⼴泛的⾳乐爱好者圈⼦中并不为⼈所知。 ⽐赛的获胜者将在波兰和奥地利
+的⾳乐厅演出，⽽⼊选的参赛者将有机会参加由著名钢琴家和教育家成⽴的 Calisia
+艺术基⾦会举办的⼤师班。获胜者除了能在获奖者⾳乐会上演奏之外，还将获得现⾦
+奖励。
     </p>
     <div class="width-form border-competition">
 
@@ -145,11 +142,11 @@
     </div>
     <div class="width-form">
         <form>
-            <p class="text-application text-competition"> Rules of the competition <i
+            <p class="text-application text-competition"> ⽐赛章程<i>
                     class="fa-solid fa-arrow-down"></i> </p>
             <a class="download-button" href="Rules of the Competition - Chinese.docx" download>
 
-                <p class="download-text">Download rules of the competition</p>
+                <p class="download-text">下载⽐赛章程</p>
 
             </a>
         </form>
