pdf file chineese

--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -144,7 +144,7 @@
         <form>
             <p class="text-application text-competition"> ⽐赛章程<i>
                     class="fa-solid fa-arrow-down"></i> </p>
-            <a class="download-button" href="Rules of the Competition - Chinese.docx" download>
+            <a class="download-button" href="Rules of the Competition - CHINESE .pdf" download>
 
                 <p class="download-text">下载⽐赛章程</p>
 
