--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -142,8 +142,8 @@
     </div>
     <div class="width-form">
         <form>
-            <p class="text-application text-competition"> ⽐赛章程<i>
-                    class="fa-solid fa-arrow-down"></i> </p>
+            <p class="text-application text-competition"> ⽐赛章程
+                <i class="fa-solid fa-arrow-down"></i> </p>
             <a class="download-button" href="Rules of the Competition - CHINESE .pdf" download>
 
                 <p class="download-text">下载⽐赛章程</p>
